k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-backend
  namespace: marline-expensy
  labels:
    app: expensy-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      containers:
        - name: expensy-api
          image: marlinejohn/expensy-backend:latest
          ports:
            - containerPort: 8706
---
apiVersion: v1
kind: Service
metadata:
  name: expensy-backend
spec:
  selector:
    app: expensy-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8706
  type: LoadBalancer
